# hiprl_replicate

./: .gitignore  CMakeLists.txt  README.md  TroubleShooting.txt  package.xml  pyMetaController algorithm.docx  pyMetaController algorithm.odt  query_client.py
Visualization/Baselines/PPO2_1/: events.out.tfevents.1626076976.morin-System-Product-Name
Visualization/Baselines/PPO2_2/: events.out.tfevents.1626077034.morin-System-Product-Name
Visualization/PPO/: loss.txt  reward.txt
include/hiprl_replicate/: hiprl_action_interface.h  knowledge_updater.h  knowledge_updater_multi.h  knowledge_updater_multi_individual.h
launch/: knowledge_manager.launch  planner.launch
learned_agent/: agent.txt
msg/: Obs.msg  Obs_multi.msg
pddl/: hiprl_mini.pddl  hiprl_mini_multi.pddl  hiprl_problem0.pddl  hiprl_problem0_multi.pddl  hiprl_problem0_no.pddl  hiprl_problem_mini.pddl  hiprl_sensing.py  hiprl_sensing.yaml  hiprl_task.pddl  hiprl_task_test.pddl  plan.pddl  problem copy.pddl  problem.pddl  problem_plan_solvable.pddl  temp.txt  test.pddl
script/: Validation_Curve_HiPRL_multi.csv  Validation_Curve_IEHiPRL_multi.csv  a3c.py  avg_plot.py  avg_plot_csv.py  avg_plot_csv_dqn.py  avg_plot_csv_dqn_individual.py  avg_plot_csv_individual.py  avg_plot_csv_multi.py  avg_plot_csv_multi_training.py  avg_plot_csv_multi_validation.py  avg_plot_csv_reward.py  avg_plot_csv_reward_individual.py  avg_plot_csv_single.py  avg_plot_csv_single_individual.py  cartpole_test.py  dgn_multi_hiprlgrid.py  dqn_openai_baseline3_mine.py  dqn_openai_baseline3_mine_pi.py  heuristic.py  hiprlgrid_0705.py  logging_heuristic.csv  minigrid_0705.py  ppo.py  ppo_openai.py  ppo_openai_baseline3.py  ppo_openai_baseline3_mine.py  ppo_openai_baseline3_mine_pi.py  ppo_openai_baseline_multi_network_512_512.py  ppo_openai_baseline_multi_pose_2048.py  ppo_openai_baseline_multi_short.py  ppo_openai_baseline_multi_short_512_512.py  ppo_openai_baseline_multi_short_pose_2048.py  ppo_openai_baseline_multi_short_pose_mine.py  ppo_openai_baseline_multi_simple.py
script/a2c_cartpole_tensorboard/A2C_1/: events.out.tfevents.1627274576.morin-System-Product-Name.27578.0
script/a2c_cartpole_tensorboard/A2C_2/: events.out.tfevents.1627462668.morin-System-Product-Name.21884.0
script/logs/: evaluations.npz
script/logs_hiprl/: evaluations.npz
script/logs_hiprl_multi/: evaluations.npz
script/logs_hiprl_multi_512/: evaluations.npz
script/logs_hiprl_multi_short/: evaluations.npz
script/logs_hiprl_multi_short_512/: evaluations.npz
src/: basic_problem_generator  basic_problem_generator.cpp  hiprl_action_interface.cpp  hiprl_action_interface_node.cpp  knowledge_update_multi_individual_node.cpp  knowledge_update_multi_node.cpp  knowledge_update_node.cpp  knowledge_updater.cpp  knowledge_updater_multi.cpp  knowledge_updater_multi_individual.cpp
srv/: ActionExecution.srv  AlertPlanActionNum.srv
